kubernetes/monitoring/prometheus/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - grafana.snyder.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: kube-prometheus-stack-grafana
        port: 80
